--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <link rel="icon" type="image/svg" href="/logo-website.svg">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Asyraf's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
